Added directions to README.txt for running in VM